pfish       2005/11/01 00:33:18 UTC	(20051101-3371)
  Log:
  - Don't allow a SRA nickname to be dropped.
  - Update freeze SRA return message.
  

  Changes:	Modified:
  +5 -0		trunk/modules/nickserv/drop.c (File Modified) 
  +1 -1		trunk/modules/nickserv/freeze.c (File Modified) 
  +6 -0		trunk/modules/userserv/drop.c (File Modified) 
  +1 -1		trunk/modules/userserv/freeze.c (File Modified) 


jilles      2005/10/31 10:36:48 UTC	(20051031-3369)
  Log:
  Oops, make sure MODE +o changes are properly reversed
  when SECURE is enabled.
  

  Changes:	Modified:
  +1 -1		trunk/src/cmode.c (File Modified) 


jilles      2005/10/31 10:05:05 UTC	(20051031-3367)
  Log:
  Expand Id keyword.
  

  Changes:	Modified:
  + -		trunk/modules/xmlrpc/channel.c  (Property Modified)


pfish       2005/10/31 09:55:10 UTC	(20051031-3365)
  Log:
  ChanServ LIST:
  - Show marked and frozen channels.
  

  Changes:	Modified:
  +15 -3	trunk/modules/chanserv/list.c (File Modified) 


pfish       2005/10/31 09:43:23 UTC	(20051031-3363)
  Log:
  Put operinfo (freeze/mark) data below flags, and add end of info notice.
  

  Changes:	Modified:
  +4 -2		trunk/modules/chanserv/info.c (File Modified) 


pfish       2005/10/31 09:26:19 UTC	(20051031-3361)
  Log:
  NickServ LIST: Many logic improvments/bugfixes:
  Fix match count
  Show all properties of a nickname instead of just one 
  

  Changes:	Modified:
  +24 -11	trunk/modules/nickserv/list.c (File Modified) 


alambert    2005/10/31 09:19:01 UTC	(20051031-3359)
  Log:
  account.register: a little more sanity checking

  Changes:	Modified:
  +1 -1		trunk/modules/xmlrpc/account.c (File Modified) 


alambert    2005/10/31 09:13:23 UTC	(20051031-3357)
  Log:
  account.register: Fix activation required message.

  Changes:	Modified:
  +3 -3		trunk/modules/xmlrpc/account.c (File Modified) 


alambert    2005/10/31 09:07:21 UTC	(20051031-3355)
  Log:
  account.register: we don't care which user; don't bother storing it

  Changes:	Modified: